--- a/index.html
+++ b/index.html
@@ -1,46 +1,75 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title></title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <title>The Ping Pong Game</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
-        <h1>Header</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation </p>
-      </div>  <!-- /JUMBOTRON -->
 
-  <!-- Row: 1 -->
-      <div class="row">
-        <div class="col-sm-12">
+    <div class="header container">
+        <h1>Ping-Pong</h1>
+    </div>
+  </div>
+  <!-- Sidebar -->
+  <div class="sidebar container">
+    <h2>About Ping Pong</h2>
+      <h4>Created by:</h4>
+        <p>Megan Fayer</p>
+      <h4>GitHub Username/URL:</h4>
+        <p><a href="https://github.com/buffbabyfinn">BuffBabyFinn</a></p>
+      <h4>Level 2 Test for:</h4>
+        <p>Intro (day)</p>
+  </div>
+  <!-- End Sidebar -->
+  <!-- Rules -->
+    <div class="container rules">
 
-  <!-- Form -->        
-          <form class="">
+
+      <h2>Let's play!</h2>
+      <h4>Rules:</h4>
+      <p>
+        Ping Pong will count up to your number from 1 with the following exceptions:
+      </p>
+      <ol>
+
+          <li>Numbers divisible by 3 become "ping"</li>
+          <li>Numbers divisible by 5 become "pong"</li>
+          <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+
+      </ol>
+
+  <!--End Rules -->
+
+  <!-- Form -->
+
+    <div class="container form">
+          <form id="numForm">
             <div class="form-group">
-              <label for="">Lorem Ipsum Baby!:</label>
-              <input class="hotPuddin" type="text" name="name" value="">
+              <label for="">Enter your number here:</label>
+              <input id="numInput" class="heighttext" type="number" required>
+            <button class="button" type="submit" id="submit">Ping Pong!</button>
             </div>
-
-            <div class="form-group">
-              <label for="">Lorem Ipsum Baby!:</label>
-              <input class="hotPuddin" type="text" name="name" value="">
-            </div>
-
-            <button class="btn btn-info" type="submit" name="button">Gimme some sugar baby</button>
           </form>
 
-        </div>  <!-- /col-sm-12 -->
-      </div>  <!-- /Row -->
+  <!--End Form -->
 
-    </div>  <!-- /Container -->
+  <!-- Results -->
+    <div class="container list">
+
+      <button class="button endButton" type="refresh">Play Again!</button>
+
+      <ul id="ppList">
+
+
+      </ul>
+
+    </div>
+    </div>
+    </div> <!-- Rule Container -->
 
   </body>
 </html>
